Designed the NavBar
1. Construct basic components and services
2. 10
3. Designed the NavBar (HTML and SCSS)

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -1,1 +1,13 @@
-{}
+{
+    "admin_panel": "Admin Panel",
+    "website_name": "Purple Motel",
+    "home": "Home",
+    "services": "Services",
+    "restaurant": "Restaurant",
+    "rooms": "Rooms",
+    "room": "Room",
+    "stock": "Stock",
+    "login": "Login",
+    "sign_up": "Sign Up",
+    "support": "Support"
+}
