Designed the Footer
1. Construct basic components and services
2. 10
3. Designed the Footer (HTML and SCSS)

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -9,5 +9,13 @@
     "stock": "Stock",
     "login": "Login",
     "sign_up": "Sign Up",
-    "support": "Support"
+    "support": "Support",
+    "powered_by": "Powered by",
+    "team_name": "Team9",
+    "mascot": "Purple Cat",
+    "about_us": "About Us",
+    "terms_conditions": "Terms & Conditions",
+    "subscribe": "Subscribe to our newsletter",
+    "ok": "Ok"
+
 }
