--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
     "room": "Room",
     "stock": "Stock",
     "login": "Login",
+    "sign_in": "Sign In",
     "sign_up": "Sign Up",
     "support": "Support",
     "powered_by": "Powered by",
@@ -16,6 +17,12 @@
     "about_us": "About Us",
     "terms_conditions": "Terms & Conditions",
     "subscribe": "Subscribe to our newsletter",
-    "ok": "Ok"
+    "ok": "Ok",
+    "password": "Password",
+    "email": "Email",
+    "no_account": "Don't Have an Account",
+    "forgot_password": "Forgot Password",
+    "invalid_email": "Invalid Email"
+
 
 }
