--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
     "email": "Email",
     "no_account": "Don't Have an Account",
     "forgot_password": "Forgot Password",
+    "invalid_credentials": "Incorrect Credentials",
     "invalid_email": "Invalid Email"
 
 
