Added some Error Awareness🔒
1. Complete Authentication
2. 10
3. Differentiated between connection errors and unauthorized errors.

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -23,7 +23,8 @@
     "no_account": "Don't Have an Account",
     "forgot_password": "Forgot Password",
     "invalid_credentials": "Incorrect Credentials",
-    "invalid_email": "Invalid Email"
+    "invalid_email": "Invalid Email",
+    "connection_error": "Connection Error"
 
 
 }
