Created the basic design of the filter
1. Construct basic components and services
2. 10
3. Prepared the filter component with a design that handles text based content

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -16,6 +16,9 @@
     "about_us": "About Us",
     "terms_conditions": "Terms & Conditions",
     "subscribe": "Subscribe to our newsletter",
-    "ok": "Ok"
+    "ok": "Ok",
+    "reset_filter": "Reset Filter",
+    "filter": "Filter",
+    "filter_by": "Filter By"
 
 }
