--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -24,7 +24,14 @@
     "forgot_password": "Forgot Password",
     "invalid_credentials": "Incorrect Credentials",
     "invalid_email": "Invalid Email",
-    "connection_error": "Connection Error"
+    "connection_error": "Connection Error",
+    "first_name":"First Name",
+    "last_name":"Last Name",
+    "phone_number": "Phone Number",
+    "date_of_birth": "Date Of Birth",
+    "gender": "Gender",
+    "have_account": "Already Have an Account",
+    "confirm_password": "Confirm Password"
 
 
 }
