--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -31,7 +31,9 @@
     "date_of_birth": "Date Of Birth",
     "gender": "Gender",
     "have_account": "Already Have an Account",
-    "confirm_password": "Confirm Password"
+    "confirm_password": "Confirm Password",
+    "password_match": "Passwords should be the same",
+    "weak_password": "Password is too weak"
 
 
 }
