Completed Registration Form🔒
1. Complete Authentication
2. 10
3. Completed the registration popup that will validate user information.

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -33,7 +33,11 @@
     "have_account": "Already Have an Account",
     "confirm_password": "Confirm Password",
     "password_match": "Passwords should be the same",
-    "weak_password": "Password is too weak"
+    "weak_password": "Password is too weak",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "rather_not_say": "Rather Not Say"
 
 
 }
