Created the Permission system🫂
1. Complete Users Database Page
2. 10
3. Created the main permission system that will be used to control authorization across the app

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -40,6 +40,7 @@
     "rather_not_say": "Rather Not Say",
     "reset_filter": "Reset Filter",
     "filter": "Filter",
+    "user": "User",
     "filter_by": "Filter By"
 
 }
