Mirrored the Permission system🫂
1. Complete Users Database Page
2. 10
3. Mirrored the Permission system in for the individual users.

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -41,6 +41,7 @@
     "reset_filter": "Reset Filter",
     "filter": "Filter",
     "user": "User",
+    "user_type": "User Type",
     "filter_by": "Filter By"
 
 }
