Added marks to the Users🫂
1. Complete Users Database Page
2. 10
3. Added indicators that will facilitate the way the user database is displayed

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -42,6 +42,9 @@
     "filter": "Filter",
     "user": "User",
     "user_type": "User Type",
-    "filter_by": "Filter By"
+    "filter_by": "Filter By",
+    "room_type": "Room Type",
+    "language": "Language",
+    "booking": "Booking"
 
 }
