Created a button system🔧
1. N/A
2. 10
3. Prepared a button system that will allow us to perform quick actions.

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -45,6 +45,7 @@
     "filter_by": "Filter By",
     "room_type": "Room Type",
     "language": "Language",
-    "booking": "Booking"
+    "booking": "Booking",
+    "quick_actions": "Quick Actions"
 
 }
