Added a new System🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added a new system to deal with composite data in the database component

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
     "terms_conditions": "Terms & Conditions",
     "subscribe": "Subscribe to our newsletter",
     "ok": "Ok",
+    "delete": "Delete",
     "password": "Password",
     "email": "Email",
     "no_account": "Don't Have an Account",
