Handled verify email🔧
1. Complete Authentication
2. 10
3. Implemented the verification process

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -8,7 +8,9 @@
     "room": "Room",
     "stock": "Stock",
     "login": "Login",
+    "logout": "Logout",
     "sign_in": "Sign In",
+    "verify": "Verify Email",
     "sign_up": "Sign Up",
     "support": "Support",
     "powered_by": "Powered by",
@@ -24,6 +26,8 @@
     "no_account": "Don't Have an Account",
     "forgot_password": "Forgot Password",
     "invalid_credentials": "Incorrect Credentials",
+    "sent_email": "Email Sent",
+    "used_credentials": "Email or Phone number already in use",
     "invalid_email": "Invalid Email",
     "connection_error": "Connection Error",
     "first_name":"First Name",
@@ -31,6 +35,7 @@
     "phone_number": "Phone Number",
     "date_of_birth": "Date Of Birth",
     "gender": "Gender",
+    "verification": "Verification Code",
     "have_account": "Already Have an Account",
     "confirm_password": "Confirm Password",
     "password_match": "Passwords should be the same",
