Finished the forgot password process🔧
1. Complete Authentication
2. 10
3. Implemented the forgot password process

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
     "terms_conditions": "Terms & Conditions",
     "subscribe": "Subscribe to our newsletter",
     "ok": "Ok",
+    "reset": "Reset",
     "delete": "Delete",
     "password": "Password",
     "email": "Email",
@@ -29,6 +30,7 @@
     "sent_email": "Email Sent",
     "used_credentials": "Email or Phone number already in use",
     "invalid_email": "Invalid Email",
+    "invalid_code": "Invalid Code",
     "connection_error": "Connection Error",
     "first_name":"First Name",
     "last_name":"Last Name",
