Finished the Profile operations🔧
1. Design, Implement and Link Profile
2. 10
3. Finished all the operations related to the profile

--- a/Client/Website/src/assets/i18n/en.json
+++ b/Client/Website/src/assets/i18n/en.json
@@ -20,6 +20,9 @@
     "terms_conditions": "Terms & Conditions",
     "subscribe": "Subscribe to our newsletter",
     "ok": "Ok",
+    "change_password": "Change Password",
+    "old_password": "Old Password",
+    "invalid_old_password": "Invalid Old Password",
     "reset": "Reset",
     "delete": "Delete",
     "password": "Password",
