--- a/Client/Application/src/assets/i18n/en.json
+++ b/Client/Application/src/assets/i18n/en.json
@@ -1,68 +1,84 @@
 {
-    "admin_panel": "Admin Panel",
-    "website_name": "Purple Motel",
-    "home": "Home",
-    "services": "Services",
-    "restaurant": "Restaurant",
-    "rooms": "Rooms",
-    "room": "Room",
-    "stock": "Stock",
-    "login": "Login",
-    "sign_in": "Sign In",
-    "sign_up": "Sign Up",
-    "support": "Support",
-    "powered_by": "Powered by",
-    "team_name": "Team9",
-    "mascot": "Purple Cat",
     "about_us": "About Us",
-    "terms_conditions": "Terms & Conditions",
-    "subscribe": "Subscribe to our newsletter",
-    "ok": "Ok",
+    "access": "Access",
+    "activities": "Activities",
+    "admin_panel": "Admin Panel",
+    "already_have_an_account": "Already have an Account?",
+    "back": "Back",
+    "book": "Book",
+    "booking": "Booking",
+    "bookings_database": "Bookings Database",
+    "cancel": "Cancel",
+    "chefs": "The Chefs",
+    "confirm_password": "Confirm Password",
+    "connection_error": "Connection Error",
+    "date_of_birth": "Date Of Birth",
+    "date": "Date",
     "delete": "Delete",
-    "password": "Password",
+    "description": "Description",
+    "don't_have_an_account": "Don't have an Account",
     "email": "Email",
-    "no_account": "Don't Have an Account",
+    "explore": "Explore",
+    "facilities": "Facilities",
+    "female": "Female",
+    "feedback": "Feedback",
+    "filter": "Filter",
+    "filter_by": "Filter By",
+    "first_name": "First Name",
+    "food_database": "Food Database",
     "forgot_password": "Forgot Password",
+    "gender": "Gender",
+    "go_back": "Go Back",
+    "have_account": "Already Have an Account",
+    "home": "Home",
+    "hotel_introduction": "Book your stay and enjoy Luxury redefined at the most affordable rates.",
     "invalid_credentials": "Incorrect Credentials",
     "invalid_email": "Invalid Email",
-    "connection_error": "Connection Error",
-    "first_name":"First Name",
-    "last_name":"Last Name",
-    "phone_number": "Phone Number",
-    "date_of_birth": "Date Of Birth",
-    "gender": "Gender",
-    "have_account": "Already Have an Account",
-    "confirm_password": "Confirm Password",
-    "password_match": "Passwords should be the same",
-    "weak_password": "Password is too weak",
-    "male": "Male",
-    "female": "Female",
-    "other": "Other",
-    "rather_not_say": "Rather Not Say",
-    "reset_filter": "Reset Filter",
-    "filter": "Filter",
-    "user": "User",
-    "user_type": "User Type",
-    "filter_by": "Filter By",
-    "room_type": "Room Type",
     "language": "Language",
-    "booking": "Booking",
-    "quick_actions": "Quick Actions",
-    "view_menu": "View Menu",
-    "feedback": "Feedback",
-    "menu": "Menu",
-    "chefs": "The Chefs",
-    "welcome_to": "Welcome To",
-    "purple": "Purple",
-    "motel": "Motel",
-    "restaurant_introduction": "Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes crafted from the freshest ingredients and innovative techniques.",
-    "hotel_introduction": "Book your stay and enjoy Luxury redefined at the most affordable rates.",
-    "menu_introduction": "The menu changes seasonally to ensure that the ingredients are at the peak of their flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.",
-    
-
-    "this_is_it": "This is it.",
-    "news_feed": "News Feed",
-    "published on": "published on",
+    "last_name": "Last Name",
+    "learn_more": "Learn More",
     "likes": "Likes",
-    "explore": "Explore"
+    "login": "Login",
+    "login_now": "Login Now",
+    "mascot": "Purple Cat",
+    "menu": "Menu",
+    "menu_introduction": "The menu changes seasonally to ensure that the ingredients are at the peak of their flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.",
+    "news_feed": "News Feed",
+    "next": "Next",
+    "no_account": "Don't Have an Account",
+    "occupancy": "Occupancy",
+    "ok": "Ok",
+    "other": "Other",
+    "password": "Password",
+    "password_match": "Passwords should be the same",
+    "phone_number": "Phone Number",
+    "powered_by": "Powered by",
+    "published on": "published on",
+    "purple": "Purple",
+    "quick_actions": "Quick Actions",
+    "rather_not_say": "Rather Not Say",
+    "register": "Register",
+    "reset_filter": "Reset Filter",
+    "restaurant": "Restaurant",
+    "restaurant_introduction": "Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes crafted from the freshest ingredients and innovative techniques.",
+    "rooms": "Rooms",
+    "rooms_database": "Rooms Database",
+    "room": "Room",
+    "room_type": "Room Type",
+    "services": "Services",
+    "sign_in": "Sign In",
+    "sign_up": "Sign Up",
+    "stock": "Stock",
+    "subscribe": "Subscribe to our newsletter",
+    "support": "Support",
+    "team_name": "Team9",
+    "terms_conditions": "Terms & Conditions",
+    "this_is_it": "This is it.",
+    "total": "Total",
+    "user": "User",
+    "user_database": "User Database",
+    "user_type": "User Type",
+    "view_menu": "View Menu",
+    "welcome_to": "Welcome To",
+    "weak_password": "Password is too weak"
 }
