--- a/Client/Application/src/assets/i18n/en.json
+++ b/Client/Application/src/assets/i18n/en.json
@@ -62,6 +62,7 @@
     "restaurant": "Restaurant",
     "restaurant_introduction": "Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes crafted from the freshest ingredients and innovative techniques.",
     "rooms": "Rooms",
+    "rooms_and_rates": "Rooms and rates",
     "rooms_database": "Rooms Database",
     "room": "Room",
     "room_type": "Room Type",
