--- a/Client/Application/src/assets/i18n/en.json
+++ b/Client/Application/src/assets/i18n/en.json
@@ -64,5 +64,6 @@
     "news_feed": "News Feed",
     "published on": "published on",
     "likes": "Likes",
-    "explore": "Explore"
+    "explore": "Explore",
+    "logout": "Logout"
 }
